--- a/nutrisq/src/main/resources/application.properties
+++ b/nutrisq/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/nutrisq?useUnicode=true&serverTimezone=UTC
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
